<resources>
    <string name="app_name">NBASTATS</string>
    <string name="inicio">INICIO</string>
    <string name="btn_select">SELECT</string>
    <string name="btn_insert">INSERT</string>
    <string name="btn_update">UPDATE</string>
    <string name="btn_delete">DELETE</string>
    <string name="main">Volver a inicio</string>
    <string name="gameDeleteOk">Partido eliminado exitosamente</string>
    <string name="gameDeleteNot">No se encontró el partido con el ID especificado</string>
    <string name="gameDeleteFail">Error al eliminar el partido</string>
    <string name="insertGameValidate">Ingrese un ID de partido válido</string>
    <string name="playerDeleteOk">Jugador eliminado con éxito</string>
    <string name="playerDeleteFail">Error al eliminar el jugador</string>
    <string name="insertPlayerValidate">Ingrese el ID del jugador a eliminar</string>
    <string name="insertStatValidate">Ingrese un ID de estadística válido</string>
    <string name="statDeleteOk">Estadística eliminada exitosamente</string>
    <string name="statDeleteNot">Error al eliminar la estadística</string>
    <string name="teamDeleteOk">Equipo eliminado correctamente</string>
    <string name="teamDeleteNot">No se ha podido eliminar el equipo</string>
    <string name="insertTeamValidate">Ingresa un equipo válido</string>
    <string name="insertGameOk">Partido insertado exitosamente</string>
    <string name="insertGameNot">Error al insertar partido</string>
    <string name="insertPlayerOk">Jugador insertado exitosamente</string>
    <string name="insertPlayerNot">Fallo al insertar jugador</string>
    <string name="valueEmpty">Por favor, complete todos los campos</string>
    <string name="existStat">Las estadísticas para este jugador en este juego ya existen</string>
    <string name="insertStatOk">Estadísticas insertadas correctamente</string>
    <string name="insertStatNot">Error al insertar estadísticas</string>
    <string name="insertTeamOk">Equipo insertado correctamente</string>
    <string name="insertTeamNot">Error al insertar el equipo</string>
    <string name="gameId">"Game ID: "</string>
    <string name="gameDate">"Game Date: "</string>
    <string name="homePoints">"Puntos Local: "</string>
    <string name="awayPoints">"Puntos Visitante: "</string>
    <string name="homeId">"Equipo Local: "</string>
    <string name="awayId">"Equipo Visitante: "</string>
    <string name="mvp">"MVP: "</string>
    <string name="resultNotFound">No se encontraron resultados.</string>
    <string name="playerId">"Player ID: "</string>
    <string name="playerName">"Nombre: "</string>
    <string name="playerSurname">"Apellido: "</string>
    <string name="playerPosition">"Posición: "</string>
    <string name="playerCountry">"País: "</string>
    <string name="playerTeam">"Equipo: "</string>
    <string name="statId">"Stat ID: "</string>
    <string name="plg">"Puntos útltimo partido: "</string>
    <string name="ppg">"Puntos por Partido: "</string>
    <string name="rlg">"Rebotes Último Partido: "</string>
    <string name="rpg">"Rebotes por Partido: "</string>
    <string name="alg">"Asistencias Último Partido: "</string>
    <string name="apg">"Asistencias por Partido: "</string>
    <string name="slg">"Robos Último Partido: "</string>
    <string name="blg">Tapones Último Partido</string>
    <string name="llg">Pérdidas Último Partido</string>
    <string name="teamId">"Id Equipo: "</string>
    <string name="teamName">"Nombre Equipo: "</string>
    <string name="city">"Ciudad: "</string>
    <string name="arena">"Estadio: "</string>
    <string name="conference">"Conferencia: "</string>
    <string name="updateGameOk">Partido actualizado correctamente.</string>
    <string name="updateGameFail">Error al actualizar el partido.</string>
    <string name="updateStatOk">Estadística actualizada correctamente.</string>
    <string name="updateStatFail">Fallo al actualizar la estadística.</string>
    <string name="updatePlayerOk">Jugador actualizado correctamente.</string>
    <string name="updatePlayerFail">Fallo al actualizar el jugador.</string>
    <string name="updateTeamOk">Equipo actualizado correctamente.</string>
    <string name="updateTeamFail">Fallo al actualizar el equipo.</string>
</resources>